<resources>
    <string name="app_name">Finance Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_entries">Entries</string>
    <string name="bottom_menu_reminders">Reminders</string>

    <!--    Entry list strings-->
    <string name="upload_entries_menu_button">Upload entries</string>

    <!-- New entry field strings-->
    <string name="new_entry_amount_field">Amount</string>
    <string name="new_entry_type_income">Income</string>
    <string name="new_entry_type_outcome">Outcome</string>
    <string name="new_entry_category">Category</string>
    <string name="new_entry_fund_add">Add to fund</string>
    <string name="new_entry_fund_deduct">Deduct from fund</string>
    <string name="new_entry_description">Description</string>
    <string name="new_entry_add_tags">Add Tags</string>
    <string name="new_entry_save">Save</string>
</resources>