<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <import type="com.mobile.finance.newentry.Converters"/>

        <variable
            name="newEntryViewModel"
            type="com.mobile.finance.newentry.NewEntryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amount_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/new_entry_amount_field"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                    <com.google.android.material.textfield.TextInputEditText
                        app:entryAmount="@={Converters.bigDecimalToString(newEntryViewModel.newEntry.amount)}"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/entry_type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:onCheckedChanged="@{newEntryViewModel::setEntryType}"
                    android:checkedButton="@+id/income_radio_button">

                    <RadioButton
                        android:id="@+id/income_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/new_entry_type_income" />

                    <RadioButton
                        android:id="@+id/outcome_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/new_entry_type_outcome" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/category_text_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/new_entry_category">

                        <AutoCompleteTextView
                            app:entryCategory="@={newEntryViewModel.newEntry.category}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/add_category_button"
                        style="@style/Widget.App.Button.Contained.IconOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0"
                        app:icon="@drawable/ic_baseline_add_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fund_text_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:newEntryTypeHint="@{newEntryViewModel.newEntry.type}">

                        <AutoCompleteTextView
                            android:text="@={newEntryViewModel.newEntry.fund}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/add_fund_button"
                        style="@style/Widget.App.Button.Contained.IconOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0"
                        app:icon="@drawable/ic_baseline_add_24" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/new_entry_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={newEntryViewModel.newEntry.description}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tags_chip_group"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tags_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/new_entry_add_tags">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/add_tag_button"
                    style="@style/Widget.App.Button.Contained.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0"
                    app:icon="@drawable/ic_baseline_add_24" />
            </LinearLayout>

            </LinearLayout>
        </ScrollView>
            <Button
                android:id="@+id/save_entry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/new_entry_save" />
    </LinearLayout>

</layout>

